Updated _HomeSupportContainer.cshtml - added null checking, fixing Link url issue

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ html/*.html
 /Patrija.Web/assets/fonts/svgicons.woff2
 /ReadMe.txt
 /Patrija.Web/ConnectionStrings.config
+/Patrija.Web/AppSetings.config
