--- a/Patrija.Web/Views/Web.config
+++ b/Patrija.Web/Views/Web.config
@@ -23,6 +23,7 @@
 				<add namespace="Patrija.Core.ViewModels.Pages" />
 				<add namespace="Patrija.Core.Extensions" />
 				<add namespace="Patrija.Core.Controllers.Surface.Partials" />
+        <add namespace="Patrija.Web.Helpers" />
 			<add namespace="Umbraco.Web.PublishedModels" /></namespaces>
 		</pages>
 	</system.web.webPages.razor>
