--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -455,6 +455,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
+    <Compile Include="Helpers\UmbracoDictionaryHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DisplayHelpers\Dictionaries.cs" />
   </ItemGroup>
