--- a/Patrija.Web/Views/Web.config
+++ b/Patrija.Web/Views/Web.config
@@ -24,6 +24,8 @@
 				<add namespace="Patrija.Core.Extensions" />
 				<add namespace="Patrija.Core.Controllers.Surface.Partials" />
         <add namespace="Patrija.Web.Helpers" />
+        <add namespace="Patrija.Common" />
+        <add namespace="Patrija.Core" />
 			<add namespace="Umbraco.Web.PublishedModels" /></namespaces>
 		</pages>
 	</system.web.webPages.razor>
