--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -455,7 +455,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
-    <Compile Include="Helpers\UmbracoDictionaryHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DisplayHelpers\Dictionaries.cs" />
   </ItemGroup>
@@ -555,6 +554,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Helpers\" />
     <Folder Include="Views\Home\" />
     <Folder Include="Views\MacroPartials\" />
     <Folder Include="Views\Shared\EditorTemplates\" />
