--- a/Patrija.Web/AppSettings.config
+++ b/Patrija.Web/AppSettings.config
@@ -6,4 +6,11 @@
   <add key="emailSourceAdddress" value="patrija.dev.from@gmail.com"/>
   <add key="emailSourcePassword" value="patrija123"/>
   <add key="emailDestinationAdddress" value="patrija.dev.to@gmail.com"/>
+
+  <!--share this-->
+  <add key="social-facebook" value="https://www.facebook.com/sharer.php?u=$url" />
+  <add key="social-twitter" value="https://twitter.com/intent/tweet?url=$url&amp;text=$title&amp;hashtags=$hashtags" />
+  <add key="social-linkedIn" value="https://www.linkedin.com/shareArticle?url=$url&amp;title=$title" />
+  <add key="social-googlePlus" value="https://plus.google.com/share?url=$url" />
+
 </appSettings>
