--- a/Patrija.Web/AppSettings.config
+++ b/Patrija.Web/AppSettings.config
@@ -13,4 +13,7 @@
   <add key="social-linkedIn" value="https://www.linkedin.com/shareArticle?url=$url&amp;title=$title" />
   <add key="social-googlePlus" value="https://plus.google.com/share?url=$url" />
 
+  <!--news-->
+  <add key="news-numberOfArticlesOnLoad" value="3" />
+
 </appSettings>
