--- a/Patrija.Models/Patrija.Models.csproj
+++ b/Patrija.Models/Patrija.Models.csproj
@@ -374,6 +374,7 @@
     <Compile Include="DocumentTypes\IDomainRoot.cs" />
     <Compile Include="DocumentTypes\ISeo.cs" />
     <Compile Include="Extensions\DomainRootExtensions.cs" />
+    <Compile Include="Extensions\NewsBlogBlockExtension.cs" />
     <Compile Include="Extensions\PublishedContentExtensions.cs" />
     <Compile Include="Extensions\PageExtensions.cs" />
     <Compile Include="Extensions\PublishedContentPropertyExtensions.cs" />
