--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -530,6 +530,7 @@
     <Content Include="Views\Partials\Shared\_NewsBlogBlockThreeColumnTwoRows.cshtml" />
     <Content Include="Views\Partials\NestedContent\_JoinUsForm.cshtml" />
     <Content Include="Views\Partials\Shared\_Share.cshtml" />
+    <Content Include="Views\Partials\Listing\_BlogsArticlesListing.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
