--- a/Patrija.Web/Views/Web.config
+++ b/Patrija.Web/Views/Web.config
@@ -25,6 +25,7 @@
 				<add namespace="Patrija.Core.Controllers.Surface.Partials" />
         <add namespace="Patrija.Common" />
         <add namespace="Patrija.Core" />
+        <add namespace="Patrija.Core.ViewModels.Shared" />
 			<add namespace="Umbraco.Web.PublishedModels" /></namespaces>
 		</pages>
 	</system.web.webPages.razor>
