Update FooterViewModel - null checking

--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -415,6 +415,78 @@
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.controller.js" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.html" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.resource.js" />
+    <Content Include="assets\images\content\about-us.jpg" />
+    <Content Include="assets\images\content\blog-image.jpg" />
+    <Content Include="assets\images\content\finished-projects-01.jpg" />
+    <Content Include="assets\images\content\finished-projects-02.jpg" />
+    <Content Include="assets\images\content\finished-projects-03.jpg" />
+    <Content Include="assets\images\content\image-text-right-02.jpg" />
+    <Content Include="assets\images\content\image-text-right.jpg" />
+    <Content Include="assets\images\content\intro-image-03.jpg" />
+    <Content Include="assets\images\content\intro-image.jpg" />
+    <Content Include="assets\images\content\join-1.jpg" />
+    <Content Include="assets\images\content\join-2.jpg" />
+    <Content Include="assets\images\content\join-3.jpg" />
+    <Content Include="assets\images\content\join-4.jpg" />
+    <Content Include="assets\images\content\join-bottom.png" />
+    <Content Include="assets\images\content\join-left.png" />
+    <Content Include="assets\images\content\join-right.png" />
+    <Content Include="assets\images\content\join-top.png" />
+    <Content Include="assets\images\content\klub-kompas-intro.jpg" />
+    <Content Include="assets\images\content\lice-ulice-additional.jpg" />
+    <Content Include="assets\images\content\lice-ulice-intro.jpg" />
+    <Content Include="assets\images\content\lice-ulice.jpg" />
+    <Content Include="assets\images\content\logo-placeholder.png" />
+    <Content Include="assets\images\content\medias-img.jpg" />
+    <Content Include="assets\images\content\news-01.jpg" />
+    <Content Include="assets\images\content\news-02.jpg" />
+    <Content Include="assets\images\content\news-03.jpg" />
+    <Content Include="assets\images\content\news-intro-img.jpg" />
+    <Content Include="assets\images\content\ns-klub.jpg" />
+    <Content Include="assets\images\content\page-intro-ko-smo-mi.jpg" />
+    <Content Include="assets\images\content\pridruzi-se-intro.jpg" />
+    <Content Include="assets\images\content\project-additional-right.jpg" />
+    <Content Include="assets\images\content\project-left.jpg" />
+    <Content Include="assets\images\content\project-right.jpg" />
+    <Content Include="assets\images\content\rte-image.jpg" />
+    <Content Include="assets\images\content\sidebar-img-01.jpg" />
+    <Content Include="assets\images\content\support-image.jpg" />
+    <Content Include="assets\images\footer-logo.png" />
+    <Content Include="assets\images\footer-logo.svg" />
+    <Content Include="assets\images\logo.png" />
+    <Content Include="assets\images\mask\about-us-mask.svg" />
+    <Content Include="assets\images\mask\about-us-shape.svg" />
+    <Content Include="assets\images\mask\featured-project-left.svg" />
+    <Content Include="assets\images\mask\featured-project-right.svg" />
+    <Content Include="assets\images\mask\image-text-left.svg" />
+    <Content Include="assets\images\mask\image-text-right.svg" />
+    <Content Include="assets\images\mask\map-mask.svg" />
+    <Content Include="assets\images\mask\page-intro-mask.svg" />
+    <Content Include="assets\images\mask\page-intro-secondary-mask.svg" />
+    <Content Include="assets\images\mask\project-mask-left.svg" />
+    <Content Include="assets\images\mask\project-mask-right.svg" />
+    <Content Include="assets\images\mask\support-shape.svg" />
+    <Content Include="assets\images\shapes\about-us-shape.svg" />
+    <Content Include="assets\images\shapes\articles-bg.svg" />
+    <Content Include="assets\images\shapes\faq-shape.svg" />
+    <Content Include="assets\images\shapes\footer-shape-old.svg" />
+    <Content Include="assets\images\shapes\footer-shape.svg" />
+    <Content Include="assets\images\shapes\hp-grey-big.svg" />
+    <Content Include="assets\images\shapes\hp-grey-smaller.svg" />
+    <Content Include="assets\images\shapes\hp-mint-3.svg" />
+    <Content Include="assets\images\shapes\hp-mint.svg" />
+    <Content Include="assets\images\shapes\joinus-shape.svg" />
+    <Content Include="assets\images\shapes\lice-ulice-shape.svg" />
+    <Content Include="assets\images\shapes\news-slider-bg.svg" />
+    <Content Include="assets\images\shapes\single-blog-shape-01.svg" />
+    <Content Include="assets\images\shapes\single-blog-shape-02.svg" />
+    <Content Include="assets\images\shapes\testimonials-bg.svg" />
+    <Content Include="assets\images\shapes\testimonials-volunteers-bg.svg" />
+    <Content Include="assets\svg\ico-arrow.svg" />
+    <Content Include="assets\svg\ico-facebook.svg" />
+    <Content Include="assets\svg\ico-share.svg" />
+    <Content Include="assets\svg\ico-twitter.svg" />
+    <Content Include="assets\svg\ico-youtube.svg" />
     <Content Include="config\grid.editors.config.js" />
     <Content Include="config\Lang\cs-CZ.user.xml" />
     <Content Include="config\Lang\da-DK.user.xml" />
@@ -436,7 +508,9 @@
     <Content Include="config\Lang\zh-CN.user.xml" />
     <Content Include="config\logviewer.searches.config.js" />
     <Content Include="ConnectionStrings.config" />
+    <Content Include="css\style.min.css" />
     <Content Include="Global.asax" />
+    <Content Include="js\global.min.js" />
     <Content Include="Views\AboutUsPage.cshtml" />
     <Content Include="Views\JoinUsPage.cshtml" />
     <Content Include="Views\Partials\NestedContent\_ImageWithText.cshtml" />
@@ -487,6 +561,12 @@
     <Content Include="config\HealthChecks.config" />
     <Content Include="config\ClientDependency.config" />
     <Content Include="config\BackOfficeTours\getting-started.json" />
+    <Content Include="App_Code\RazorHelper.cshtml" />
+    <Content Include="assets\fonts\svgicons.ttf" />
+    <Content Include="assets\fonts\svgicons.woff" />
+    <Content Include="assets\fonts\svgicons.woff2" />
+    <Content Include="css\style.min.css.map" />
+    <Content Include="js\global.min.js.map" />
     <None Include="packages.config" />
     <Content Include="Views\Partials\Grid\Editors\Textstring.cshtml" />
     <Content Include="Views\Partials\Grid\Editors\Rte.cshtml" />
