--- a/Patrija.Web/Web.config
+++ b/Patrija.Web/Web.config
@@ -32,7 +32,7 @@
 	<appSettings file="AppSettings.config">
 		<add key="Umbraco.Core.ConfigurationStatus" value="8.1.5" />
 		<add key="Umbraco.Core.ReservedUrls" value="" />
-		<add key="Umbraco.Core.ReservedPaths" value="" />
+		<add key="Umbraco.Core.ReservedPaths" value="~/bundles-js/,~/bundles-css/" />
 		<add key="Umbraco.Core.Path" value="~/umbraco" />
 		<add key="Umbraco.Core.HideTopLevelNodeFromPath" value="true" />
 		<add key="Umbraco.Core.TimeOutInMinutes" value="20" />
