--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -613,6 +613,7 @@
     <Content Include="Views\Partials\Listing\_BlogsArticlesListing.cshtml" />
     <Content Include="Views\Partials\Listing\_TwoColumnsArticlesListing.cshtml" />
     <Content Include="Views\Partials\Listing\_ThreeColumnsArticlesListing.cshtml" />
+    <Content Include="Views\Partials\Container\_AboutUsProjectsContainer.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
