--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -531,6 +531,8 @@
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DisplayHelpers\Dictionaries.cs" />
+    <Content Include="Views\Partials\Shared\_ImageWithTextProjectPage.cshtml" />
+    <None Include="Views\Shared\DisplayTemplates\ImageWithTextProjectPageViewModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
@@ -667,5 +669,4 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-
 </Project>
