--- a/Patrija.Core/Patrija.Core.csproj
+++ b/Patrija.Core/Patrija.Core.csproj
@@ -292,6 +292,8 @@
     <Compile Include="Controllers\Surface\Partials\SearchListingController.cs" />
     <Compile Include="Controllers\Surface\Partials\SharedController.cs" />
     <Compile Include="Extensions\UrlHelperExtensions.cs" />
+    <Compile Include="ViewModels\Partials\Blog\BlogArticlePreviewViewModel.cs" />
+    <Compile Include="ViewModels\Partials\Blog\BlogWidgetsViewModel.cs" />
     <Compile Include="ViewModels\Partials\Features\ImageWithTextProjectPageViewModel.cs" />
     <Compile Include="ViewModels\Partials\Share\ShareViewModel.cs" />
     <Compile Include="Controllers\Surface\Partials\SimpleFormSurfaceController.cs" />
