--- a/Patrija.Web/AppSettings.config
+++ b/Patrija.Web/AppSettings.config
@@ -5,7 +5,7 @@
   <add key="emailSmtpPort" value="587"/>
   <add key="emailSourceAdddress" value="patrija.dev.from@gmail.com"/>
   <add key="emailSourcePassword" value="patrija123"/>
-  <add key="emailDestinationAdddress" value="patrija.dev.to@gmail.com"/>
+  <add key="emailDestinationAdddress" value="xonah14351@mail1.top"/>
 
   <!--share this-->
   <add key="social-facebook" value="https://www.facebook.com/sharer.php?u=$url" />
