--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -534,6 +534,7 @@
     <Content Include="Views\Partials\Shared\_ImageWithTextProjectPage.cshtml" />
     <Content Include="Views\Partials\Shared\_ImageTextLink.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\ImageTextLinkViewModel.cshtml" />
+    <Content Include="Views\EnglishPage.cshtml" />
     <None Include="Views\Shared\DisplayTemplates\ImageWithTextProjectPageViewModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
